<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="title_main">Playlist Maker</string>
    <string name="title_settings">Настройки</string>

    <string name="settings_dark_theme">Тёмная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_license">Пользовательское соглашение</string>
    <string name="support_mail_text">Спасибо разработчикам за крутое приложение!</string>
    <string name="support_mail_to">admin.miha@gmail.com</string>
    <string name="support_mail_subject">Сообщение разработчикам приложения Playlist Maker</string>
    <string name="offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="title_search">Поиск</string>
    <string name="share_link">\"https://practicum.yandex.ru/android-developer/\"</string>

    <string name="btn_refresh">Обновить</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_you_looking">Вы искали</string>
    <string name="btn_clear_history">Очистить историю</string>

    <string name="track_length">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>

</resources>