<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="304dp"
            android:paddingStart="12dp"
            android:layout_height="match_parent"
            android:text="@string/title_main"
            android:textColor="#ffffff"
            android:gravity="center|start"
            android:textSize="24sp" >
        </TextView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="3.33"
            android:backgroundTint="@color/main_button_bg"
            android:text="@string/search"
            android:textColor="@color/main_text"
            android:textFontWeight="500"
            android:textSize="@dimen/main_btn_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/main_text"></Button>

        <Button
            android:id="@+id/btn_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="3.33"
            android:backgroundTint="@color/main_button_bg"
            android:text="@string/library"
            android:textColor="@color/main_text"
            android:textFontWeight="500"
            android:textSize="@dimen/main_btn_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/library_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/main_text" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="3.33"
            android:backgroundTint="@color/main_button_bg"
            android:text="@string/settings"
            android:textColor="@color/main_text"
            android:textFontWeight="500"
            android:textSize="@dimen/main_btn_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/main_text"></Button>
    </LinearLayout>
</LinearLayout>