<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/activity_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="86dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageButton
            android:id="@+id/btn_back_to_main"
            style="@style/player_btn_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@null"
            android:src="@drawable/arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/track_placeholder_big"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_24"
            app:layout_constraintStart_toEndOf="@+id/left_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/top_guideline" />

        <TextView
            android:id="@+id/track_name"
            style="@style/player_track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_24"
            app:layout_constraintStart_toEndOf="@+id/left_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/artwork"
            tools:text="Track Name" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/player_track_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_24"
            app:layout_constraintStart_toEndOf="@+id/left_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/track_name"
            tools:text="Artist Name" />


        <ImageButton
            android:id="@+id/btn_add_in_playlist"
            style="@style/btn_track_control"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/in_playlist"
            android:background="@drawable/round_button"
            app:layout_constraintBottom_toTopOf="@id/play_time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toLeftOf="@+id/btn_play"
            app:layout_constraintStart_toEndOf="@+id/left_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/artist_name"
            app:layout_constraintVertical_bias="0.5" />

        <ImageButton
            android:id="@+id/btn_play"
            style="@style/btn_track_play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:padding="0dp"
            android:background="@null"
            android:src="@drawable/play_big"
            app:layout_constraintBottom_toTopOf="@+id/play_time"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline_24"
            app:layout_constraintRight_toRightOf="@+id/right_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/artist_name" />

        <ImageButton
            android:id="@+id/btn_favorite"
            style="@style/btn_track_control"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/favorite"
            android:background="@drawable/round_button"
            app:layout_constraintBottom_toTopOf="@id/play_time"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/btn_play"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/artist_name"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/play_time"
            style="@style/player_track_play_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline_24"
            app:layout_constraintRight_toRightOf="@+id/right_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/btn_play"
            android:text="00:00:00" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


        <TextView
            android:id="@+id/track_length_text"
            style="@style/player_track_info_text"
            android:layout_marginTop="32dp"
            android:text="@string/track_length"
            app:layout_constraintStart_toEndOf="@id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/play_time" />


        <TextView
            android:id="@+id/album_text"
            style="@style/player_track_info_text"
            android:text="@string/track_album"
            app:layout_constraintStart_toEndOf="@id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/track_length" />


        <TextView
            android:id="@+id/year_text"
            style="@style/player_track_info_text"
            android:text="@string/track_year"
            app:layout_constraintStart_toEndOf="@id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/album" />


        <TextView
            android:id="@+id/genre_text"
            style="@style/player_track_info_text"
            android:text="@string/track_genre"
            app:layout_constraintStart_toEndOf="@id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/year" />


        <TextView
            android:id="@+id/country_text"
            style="@style/player_track_info_text"
            android:text="@string/track_country"
            app:layout_constraintStart_toEndOf="@+id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/genre" />


        <TextView
            android:id="@+id/track_length"
            style="@style/player_track_info_value"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_16"
            app:layout_constraintStart_toEndOf="@+id/track_length_text"
            app:layout_constraintTop_toBottomOf="@id/play_time"
            tools:text="03:00:00" />


        <TextView
            android:id="@+id/album"
            style="@style/player_track_info_value"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_16"
            app:layout_constraintStart_toEndOf="@+id/album_text"
            app:layout_constraintTop_toBottomOf="@id/track_length"
            tools:text="ALBUM" />


        <TextView
            android:id="@+id/year"
            style="@style/player_track_info_value"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_16"
            app:layout_constraintStart_toEndOf="@+id/year_text"
            app:layout_constraintTop_toBottomOf="@id/album"
            tools:text="2024" />


        <TextView
            android:id="@+id/genre"
            style="@style/player_track_info_value"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_16"
            app:layout_constraintStart_toEndOf="@+id/genre_text"
            app:layout_constraintTop_toBottomOf="@+id/year"
            tools:text="genre" />

        <TextView
            android:id="@+id/country"
            style="@style/player_track_info_value"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_16"
            app:layout_constraintStart_toEndOf="@+id/country_text"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>